# saigai-solves

./: .gitignore  CHANGELOG.md  README.md  UpgradeLog.htm  build.py  installer.iss  justfile  movie.py
.github/workflows/: autocl.py  build.yml  release.yml  store-dll.py
Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset  link.xml
Assets/Animations/: Arrow bop.anim  BackWalk.anim  Blanchard Idle.anim  Blanchard NPC.controller  Credits scrolling.anim  Fading Image.anim  FrontWalk.anim  Image 1.controller  Image.controller  Images.controller  Info Slide 1.anim  Information Slide.controller  Maze Player.controller  Minigame Marker 1.controller  Minigame Marker 2.controller  Minigame Marker 3.controller  Minigame Marker Float Anim 2.anim  Minigame Marker Float Anim 3.anim  Minigame Marker Float Anim.anim  NPC Idle.anim  Player Idle.anim  Psyguy.controller  Reverse Info Slide.anim  Scrolling Credits 1.controller  SideWalk.anim  TopDown walk.anim  Win Transition.anim  Win Transition.controller
Assets/Art/: 3D_CARD_TEX_V1.fbx  MazePalette.prefab  Soto_V1.fbx  Soto_V2.fbx  Tutorial GIF 2.webm  Tutorial GIF 4.webm  Tutorial GIF.webm  Wall_texture_crop.asset  inside_card.fbx  temp_block.asset
Assets/Editor/: CLIBuild.cs
Assets/Materials/: Black.mat  (+1 more)
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Rust/: Cargo.toml
Rust/bindings/csharp/: Interop.cs
Rust/src/: bus_mg.rs  catch_mg.rs  lib.rs  main.rs  maze_mg.rs  overworld.rs  save.rs
Rust/src/experiments/: e1.rs  e2.rs  e3.rs  e4.rs  mod.rs
(+138 files in other folders)
